Cabal-Version:      2.4
Name:               plutus-pioneer-program-week03
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week03.IsData
                     , Week03.Homework1
                     , Week03.Homework2
                     , Week03.Parameterized
                     , Week03.Vesting
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

test-suite plutus-pioneer-program-week03-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: EmulatorRenderer
               , Homework1
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints -Widentities -rtsopts
               -- See Plutus Tx readme
               -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
      plutus-core -any,
      plutus-tx -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-pioneer-program-week03 -any
  build-depends:
      base >=4.9 && <5,
      aeson -any,
      bytestring -any,
      containers -any,
      data-default -any,
      freer-extras -any,
      hedgehog -any,
      prettyprinter -any,
      tasty -any,
      tasty-hunit -any,
      tasty-hedgehog >=0.2.0.0,
      tasty-golden -any,
      tasty-quickcheck -any,
      text -any,
      lens -any,
      mtl -any,
      row-types -any,
      QuickCheck -any,
      freer-simple -any,
      foldl -any,
      streaming -any

  if !(impl(ghcjs) || os(ghcjs))
      build-depends: plutus-tx-plugin -any

